# hobbitly

./: .gitignore  .project  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  settings.ini  setup.cfg
.github/workflows/: plantuml.yaml
docs/: Dockerfile
docs/assets/diagrams/: context.puml  hobbitly-system.puml  system.puml
hobbitly/: __init__.py  app.py  config.py  db.py  settings.toml
hobbitly/routes/: __init__.py
migrations/: env.py
migrations/versions/: 08eed861f9cb_initial_data.py
postgres/: Dockerfile  create-databases.sh
src/: __init__.py  app.py  cli.py
src/core/: config.py  database.py
src/models/: __init__.py  urls.py
src/routes/: __init__.py  urls.py
src/schemas/: urls.py
src/services/: urls.py
tests/: conftest.py  test_models.py  test_routes.py  test_services.py
