[tool.poetry]
name = "hobbitly"
version = "0.1.0"
description = "Um simples, mas honesto encurtador de URLs"
authors = ["Gilson Filho <me@gilsondev.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
