[tool.poetry]
name = "hobbitly"
version = "0.1.0"
description = "Um simples, mas honesto encurtador de URLs"
authors = ["Gilson Filho <me@gilsondev.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
pytest = "^7.1.2"
gitchangelog = "^3.0.4"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
