[tool.poetry]
name = "hobbitly"
version = "0.1.0"
description = "Um encurtador de URLs para aplicar inúmeros conceitos de desenvolvimento, arquitetura e design systems"
authors = ["Gilson Filho <me@gilsondev.in>"]
readme = "README.md"
homepage = "https://github.com/gilsondev/hobbitly"
repository = "https://github.com/gilsondev/hobbitly"
packages = [{ include = "src" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/gilsondev/hobbitly/issues"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.1"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"
alembic = "^1.9.3"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.4"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
ipython = "^8.10.0"

[tool.poetry.scripts]
hobbitly = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
